finely fixed line wrapping correctly

--- a/chromeExtension/hovercraft.css
+++ b/chromeExtension/hovercraft.css
@@ -33,6 +33,6 @@
     vertical-align: top;
 }
 
-.HovercraftTooltips span {
+.HovercraftTooltip span {
     white-space: nowrap;
 }
